Visualiza as informacoes do arquivo csv e suas medidas estatisticas

--- a/resolucao.ipynb
+++ b/resolucao.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "259ea38c",
    "metadata": {},
    "outputs": [],
@@ -16,6 +16,269 @@
     "from sklearn.model_selection import train_test_split\n",
     "from scipy.stats import shapiro, kstest, zscore\n",
     "import statsmodels.api as sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "79b18f96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dados = pd.read_csv('./datasets/dados_de_irrigacao.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fc3de63d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 299 entries, 0 to 298\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column                    Non-Null Count  Dtype  \n",
+      "---  ------                    --------------  -----  \n",
+      " 0   Horas de Irrigação        299 non-null    int64  \n",
+      " 1   Área Irrigada             299 non-null    int64  \n",
+      " 2   Área Irrigada por Ângulo  299 non-null    float64\n",
+      "dtypes: float64(1), int64(2)\n",
+      "memory usage: 7.1 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_dados.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f82bb272",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Horas de Irrigação</th>\n",
+       "      <th>Área Irrigada</th>\n",
+       "      <th>Área Irrigada por Ângulo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>66.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>200</td>\n",
+       "      <td>133.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>300</td>\n",
+       "      <td>200.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>400</td>\n",
+       "      <td>266.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>500</td>\n",
+       "      <td>333.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>600</td>\n",
+       "      <td>400.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>700</td>\n",
+       "      <td>466.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>800</td>\n",
+       "      <td>533.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>900</td>\n",
+       "      <td>600.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>666.666667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Horas de Irrigação  Área Irrigada  Área Irrigada por Ângulo\n",
+       "0                   1            100                 66.666667\n",
+       "1                   2            200                133.333333\n",
+       "2                   3            300                200.000000\n",
+       "3                   4            400                266.666667\n",
+       "4                   5            500                333.333333\n",
+       "5                   6            600                400.000000\n",
+       "6                   7            700                466.666667\n",
+       "7                   8            800                533.333333\n",
+       "8                   9            900                600.000000\n",
+       "9                  10           1000                666.666667"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dados.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1e2f7681",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Horas de Irrigação</th>\n",
+       "      <th>Área Irrigada</th>\n",
+       "      <th>Área Irrigada por Ângulo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>299.000000</td>\n",
+       "      <td>299.000000</td>\n",
+       "      <td>299.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>15000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>86.458082</td>\n",
+       "      <td>8645.808233</td>\n",
+       "      <td>5763.872155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>66.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>75.500000</td>\n",
+       "      <td>7550.000000</td>\n",
+       "      <td>5033.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>15000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>224.500000</td>\n",
+       "      <td>22450.000000</td>\n",
+       "      <td>14966.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>299.000000</td>\n",
+       "      <td>29900.000000</td>\n",
+       "      <td>19933.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Horas de Irrigação  Área Irrigada  Área Irrigada por Ângulo\n",
+       "count          299.000000     299.000000                299.000000\n",
+       "mean           150.000000   15000.000000              10000.000000\n",
+       "std             86.458082    8645.808233               5763.872155\n",
+       "min              1.000000     100.000000                 66.666667\n",
+       "25%             75.500000    7550.000000               5033.333333\n",
+       "50%            150.000000   15000.000000              10000.000000\n",
+       "75%            224.500000   22450.000000              14966.666667\n",
+       "max            299.000000   29900.000000              19933.333333"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dados.describe()"
    ]
   }
  ],
