Divide os dados entre treino e teste

--- a/resolucao.ipynb
+++ b/resolucao.ipynb
@@ -508,9 +508,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d325a70f",
+   "metadata": {},
+   "source": [
+    "## Treino e Testes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "648b3816",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df_dados['Horas de Irrigação'].values.reshape(-1, 1)\n",
+    "y = df_dados['Área Irrigada por Ângulo'].values.reshape(-1, 1)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a5f4291f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg_model = LinearRegression()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "648b3816",
+   "id": "246a76b2",
    "metadata": {},
    "outputs": [],
    "source": []
