Utiliza métricas de desempenho MAE e MSE

--- a/resolucao.ipynb
+++ b/resolucao.ipynb
@@ -1160,9 +1160,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc661553",
+   "metadata": {},
+   "source": [
+    "## Valida modelos e métricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1920fef0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = reg_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "8b4a7ed0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
+    "r2_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "8792f0d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8764644159495625e-12"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_absolute_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "303ad0dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0788674199138044e-24"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(y_test, y_pred)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1920fef0",
+   "id": "f6cf2619",
    "metadata": {},
    "outputs": [],
    "source": []
