Verifica teste de normalidade

--- a/resolucao.ipynb
+++ b/resolucao.ipynb
@@ -1371,6 +1371,52 @@
     "plt.ylabel('Residuos na escala padrão')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "c1ab8248",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estatística de Shapiro-Wilk: 0.9189, p-valor: 0.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Teste de Normalidade - Shapiro Wilk\n",
+    "# H0 - Segue drstriuição normal\n",
+    "# H1 - Não segue distribuição normal\n",
+    "# Se o p-valor > 0.05 não rejeita H0, caso contrário rejeitamos\n",
+    "stat_shapiro, p_valor_shapiro = shapiro(residuos.reshape(-1))\n",
+    "print(\"Estatística de Shapiro-Wilk: {:.4f}, p-valor: {:.4f}\".format(stat_shapiro, p_valor_shapiro))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "e176b6f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estatística de kstest-Wilk: 0.49999999999854866, p-valor: 2.4869515023142266e-21\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Teste de Normalidade - Kolmogorov-Smirnov\n",
+    "# H0 - Segue drstriuição normal\n",
+    "# H1 - Não segue distribuição normal\n",
+    "# Se o p-valor > 0.05 não rejeita H0, caso contrário rejeitamos\n",
+    "stat_ks, p_valor_ks = kstest(residuos.reshape(-1), 'norm')\n",
+    "print(\"Estatística de kstest-Wilk: {}, p-valor: {}\".format(stat_ks, p_valor_ks))"
+   ]
   }
  ],
  "metadata": {
