--- a/resolucao.ipynb
+++ b/resolucao.ipynb
@@ -1417,6 +1417,49 @@
     "stat_ks, p_valor_ks = kstest(residuos.reshape(-1), 'norm')\n",
     "print(\"Estatística de kstest-Wilk: {}, p-valor: {}\".format(stat_ks, p_valor_ks))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd4ec923",
+   "metadata": {},
+   "source": [
+    "## Predições do Modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "6f547420",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1000.]])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg_model.predict([[15]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41069887",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb3ef9a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
