--- a/resolucao.ipynb
+++ b/resolucao.ipynb
@@ -1451,15 +1451,31 @@
    "cell_type": "markdown",
    "id": "41069887",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Salva o Modelo"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "cb3ef9a7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['modelo_irrigacao.pkl']"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "joblib.dump(reg_model, 'modelo_irrigacao.pkl')"
+   ]
   }
  ],
  "metadata": {
